<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addphrase.AddPhraseFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Title" />

            <TextView
                android:id="@+id/tv_resource"
                style="@style/box_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resource_title" />

            <EditText
                android:id="@+id/ed_resource"
                style="@style/box_form_style"
                android:layout_height="wrap_content"
                android:text="Title" />

            <TextView
                android:id="@+id/tv_author_resource"
                style="@style/box_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_resource_title" />

            <EditText
                android:id="@+id/ed_author_resource"
                style="@style/box_form_style"
                android:layout_height="wrap_content"
                android:text="Title" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/box_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_title" />

            <EditText
                android:id="@+id/ed_location"
                style="@style/box_form_style"
                android:layout_height="wrap_content"
                android:text="Title" />

            <TextView
                android:id="@+id/tv_phrase"
                style="@style/box_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phrase_title" />

            <EditText
                android:id="@+id/ed_phrase"
                style="@style/box_form_style"
                android:layout_height="wrap_content"
                android:text="Title" />

            <TextView
                android:id="@+id/tv_phrase_example"
                style="@style/box_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phrase_example_title" />

            <EditText
                android:id="@+id/ed_phrase_example"
                style="@style/box_form_style"
                android:layout_height="wrap_content"
                android:text="Title" />

            <TextView
                android:id="@+id/tv_meaning"
                style="@style/box_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phrase_meaning_title" />

            <EditText
                android:id="@+id/ed_meaning"
                style="@style/box_form_style"
                android:layout_height="wrap_content"
                android:text="Title" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_circle_resource"
        android:layout_width="@dimen/picture_circle_resource_size"
        android:layout_height="@dimen/picture_circle_resource_size"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="20dp"
        android:src="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/icon_tab_size"
        android:layout_height="@dimen/icon_tab_size"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>